// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doc_reducer UPDATE_DOC_PAGE 1`] = `
Array [
  Object {
    "height": 600,
    "html": "<div>Some HTML is here</div>",
    "index": 1,
    "state": "READY",
    "width": 800,
  },
  Object {
    "index": 2,
  },
  Object {
    "index": 3,
  },
  Object {
    "index": 4,
  },
]
`;

exports[`doc_reducer UPDATE_DOC_PAGE 2`] = `
Array [
  Object {
    "height": 600,
    "html": "<div>Some HTML is here</div>",
    "index": 1,
    "state": "READY",
    "width": 800,
  },
  Object {
    "index": 2,
    "state": "FAIL",
  },
  Object {
    "index": 3,
  },
  Object {
    "index": 4,
  },
]
`;

exports[`doc_reducer UPDATE_DOC_PAGE 3`] = `
Array [
  Object {
    "height": 600,
    "html": "<div>Some HTML is here</div>",
    "index": 1,
    "state": "READY",
    "width": 800,
  },
  Object {
    "index": 2,
    "state": "FAIL",
  },
  Object {
    "index": 3,
    "state": "WAIT",
  },
  Object {
    "index": 4,
  },
]
`;

exports[`doc_reducer updateAction 1`] = `
Object {
  "download": Object {
    "allow": false,
    "state": "",
  },
  "edit": Object {
    "allow": false,
    "folderUrl": "",
    "state": "",
    "url": "",
  },
  "print": Object {
    "allow": false,
    "state": "",
  },
  "save": Object {
    "allow": true,
    "buttonUrl": "/some/button/url/",
    "folderUrl": "/some/folder/url/",
    "state": "SAVED",
  },
  "share": Object {
    "allow": false,
    "isFromMail": false,
    "saved": false,
    "state": "",
    "url": "",
  },
}
`;

exports[`doc_reducer updateAction 2`] = `
Object {
  "download": Object {
    "allow": false,
    "state": "",
  },
  "edit": Object {
    "allow": true,
    "folderUrl": "/url/to/downloads/folder",
    "state": "",
    "url": "/some/editor/url/",
  },
  "print": Object {
    "allow": false,
    "state": "",
  },
  "save": Object {
    "allow": true,
    "buttonUrl": "/some/button/url/",
    "folderUrl": "/some/folder/url/",
    "state": "SAVED",
  },
  "share": Object {
    "allow": false,
    "isFromMail": false,
    "saved": false,
    "state": "",
    "url": "",
  },
}
`;

exports[`doc_reducer updateAction 3`] = `
Object {
  "download": Object {
    "allow": false,
    "state": "",
  },
  "edit": Object {
    "allow": true,
    "folderUrl": "/url/to/downloads/folder",
    "state": "",
    "url": "/some/editor/url/",
  },
  "print": Object {
    "allow": false,
    "state": "",
  },
  "save": Object {
    "allow": true,
    "buttonUrl": "/some/button/url/",
    "folderUrl": "/some/folder/url/",
    "state": "SAVED",
  },
  "share": Object {
    "allow": true,
    "isFromMail": true,
    "saved": true,
    "state": "READY",
    "url": "/some/share/url/",
  },
}
`;

exports[`doc_reducer updateAction 4`] = `
Object {
  "download": Object {
    "allow": false,
    "state": "",
  },
  "edit": Object {
    "allow": true,
    "folderUrl": "/url/to/downloads/folder",
    "state": "",
    "url": "/some/editor/url/",
  },
  "print": Object {
    "allow": true,
    "state": "WAIT",
  },
  "save": Object {
    "allow": true,
    "buttonUrl": "/some/button/url/",
    "folderUrl": "/some/folder/url/",
    "state": "SAVED",
  },
  "share": Object {
    "allow": true,
    "isFromMail": true,
    "saved": true,
    "state": "READY",
    "url": "/some/share/url/",
  },
}
`;

exports[`doc_reducer updateAction 5`] = `
Object {
  "download": Object {
    "allow": true,
    "state": "",
  },
  "edit": Object {
    "allow": true,
    "folderUrl": "/url/to/downloads/folder",
    "state": "",
    "url": "/some/editor/url/",
  },
  "print": Object {
    "allow": true,
    "state": "WAIT",
  },
  "save": Object {
    "allow": true,
    "buttonUrl": "/some/button/url/",
    "folderUrl": "/some/folder/url/",
    "state": "SAVED",
  },
  "share": Object {
    "allow": true,
    "isFromMail": true,
    "saved": true,
    "state": "READY",
    "url": "/some/share/url/",
  },
}
`;

exports[`doc_reducer updateDoc ~ conversion error 1`] = `
Object {
  "actions": Object {
    "download": Object {
      "allow": false,
      "state": "",
    },
    "edit": Object {
      "allow": false,
      "folderUrl": "",
      "state": "",
      "url": "",
    },
    "print": Object {
      "allow": false,
      "state": "",
    },
    "save": Object {
      "allow": false,
      "buttonUrl": "",
      "folderUrl": "",
      "state": "",
    },
    "share": Object {
      "allow": false,
      "isFromMail": false,
      "saved": false,
      "state": "",
      "url": "",
    },
  },
  "actionsFetched": false,
  "archivePath": "",
  "contentFamily": "",
  "contentType": "",
  "errorCode": "UNKNOWN_CONVERT_ERROR",
  "fileId": "",
  "iframe": false,
  "isPrivate": false,
  "pages": Array [],
  "protocol": "",
  "size": null,
  "state": "FAIL",
  "title": "Таблица.xlsx",
  "url": "",
  "withoutSize": false,
}
`;

exports[`doc_reducer updateDoc ~ iframe 1`] = `
Object {
  "actions": Object {
    "download": Object {
      "allow": false,
      "state": "",
    },
    "edit": Object {
      "allow": false,
      "folderUrl": "",
      "state": "",
      "url": "",
    },
    "print": Object {
      "allow": false,
      "state": "",
    },
    "save": Object {
      "allow": false,
      "buttonUrl": "",
      "folderUrl": "",
      "state": "",
    },
    "share": Object {
      "allow": false,
      "isFromMail": false,
      "saved": false,
      "state": "",
      "url": "",
    },
  },
  "actionsFetched": false,
  "archivePath": "",
  "contentFamily": "",
  "contentType": "",
  "errorCode": "",
  "fileId": "",
  "iframe": true,
  "isPrivate": false,
  "pages": Array [],
  "protocol": "",
  "size": null,
  "state": "READY",
  "title": "Документ.docx",
  "url": "/some/object/url",
  "withoutSize": false,
}
`;

exports[`doc_reducer updateDoc ~ ok 1`] = `
Object {
  "actions": Object {
    "download": Object {
      "allow": false,
      "state": "",
    },
    "edit": Object {
      "allow": false,
      "folderUrl": "",
      "state": "",
      "url": "",
    },
    "print": Object {
      "allow": false,
      "state": "",
    },
    "save": Object {
      "allow": false,
      "buttonUrl": "",
      "folderUrl": "",
      "state": "",
    },
    "share": Object {
      "allow": false,
      "isFromMail": false,
      "saved": false,
      "state": "",
      "url": "",
    },
  },
  "actionsFetched": false,
  "archivePath": "",
  "contentFamily": "",
  "contentType": "",
  "errorCode": "",
  "fileId": "",
  "iframe": false,
  "isPrivate": false,
  "pages": Array [
    Object {
      "index": 1,
    },
    Object {
      "index": 2,
    },
  ],
  "protocol": "",
  "size": null,
  "state": "READY",
  "title": "Текст.txt",
  "url": "",
  "withoutSize": false,
}
`;

exports[`doc_reducer updateDoc ~ wait 1`] = `
Object {
  "actions": Object {
    "download": Object {
      "allow": false,
      "state": "",
    },
    "edit": Object {
      "allow": false,
      "folderUrl": "",
      "state": "",
      "url": "",
    },
    "print": Object {
      "allow": false,
      "state": "",
    },
    "save": Object {
      "allow": false,
      "buttonUrl": "",
      "folderUrl": "",
      "state": "",
    },
    "share": Object {
      "allow": false,
      "isFromMail": false,
      "saved": false,
      "state": "",
      "url": "",
    },
  },
  "actionsFetched": false,
  "archivePath": "",
  "contentFamily": "",
  "contentType": "",
  "errorCode": "",
  "fileId": "",
  "iframe": false,
  "isPrivate": false,
  "pages": Array [],
  "protocol": "",
  "size": null,
  "state": "WAIT",
  "title": "Презентация.pptx",
  "url": "",
  "withoutSize": false,
}
`;
